<resources xml:lang="">
    <string name="app_name">НШБ</string>
    <string name="title_news">Новости</string>
    <string name="title_notification">Уведомления</string>
    <string name="title_entry">Записи</string>
    <string name="title_new_entry">Новая запись</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_add">Добавить</string>
    <string name="title_new_message">Новое сообщение</string>
    <string name="image">Изображение</string>
    <string name="lesson">Занятие</string>
    <string name="repetition">Репетиция</string>
    <string name="level">Ступень</string>
    <string name="teacher">Преподаватель:</string>
    <string name="classroom">Класс:</string>
    <string name="consist">Состав:</string>
    <string name="consist_input">Состав</string>
    <string name="photo">Фото</string>
    <string name="consist_value_group">Группа</string>
    <string name="consist_value_alone">Индивидуально</string>
    <string name="my_entries">Мои записи</string>
    <string name="no_entries">Нет записей</string>
    <string name="no_news">Нет новостей</string>
    <string name="no_messages">Нет сообщений</string>
    <string name="history">История</string>
    <string name="next_title">Далее</string>
    <string name="new_entry_button_title">Записаться</string>
    <string name="title_chose_entry">Куда вы хотите записаться?</string>
    <string name="login_student">Ученик</string>
    <string name="login_teacher">Преподаватель</string>
    <string name="login_admin">Администратор</string>
    <string name="login_manager">Менеджер</string>
    <string name="login_I_am">Я...</string>
    <string name="password">Пароль</string>
    <string name="password2">Подтвердите пароль</string>
    <string name="login">Логин</string>
    <string name="entry">Войти</string>
    <string name="back_button">Назад</string>
    <string name="back_button_underlined"><u>Назад</u></string>
    <string name="ups">Упс!</string>
    <string name="ups_text">Кажется эта станица находится в разработке…</string>
    <string name="profile">Профиль</string>
    <string name="tasks">Задания</string>
    <string name="settings">Настройки</string>
    <string name="about">О нас</string>
    <string name="FAQ">FAQ</string>
    <string name="usage"><u>Условия пользования</u></string>
    <string name="politics"><u>Политика конфиденциальности</u></string>
    <string name="drawer_close">Закрыть</string>
    <string name="drawer_open">Открыть</string>
    <string name="correct"><u>Изм.</u></string>
    <string name="ID">ID: 00000000</string>
    <string name="contacts">Контакты</string>
    <string name="graduate">Обучение</string>
    <string name="private_info">Личная информация</string>
    <string name="status">Статус</string>
    <string name="birth_date">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="phone_number">Телефон</string>
    <string name="email">Почта</string>
    <string name="account">Аккаунт</string>
    <string name="about_me">О себе</string>
    <string name="change_photo"><u>Изменить фотографию</u></string>
    <string name="ready"><u>Готово</u></string>
    <string name="add_news_title">Новый пост</string>
    <string name="what_is_new">Что нового?</string>
    <string name="publish">Опубликовать</string>
    <string name="raspis">Расписание</string>
    <string name="create">Создать аккаунт</string>
    <string name="title_create">Создать</string>
    <string name="program">Приложение</string>
    <string name="exit">Выйти</string>
    <string name="account_type">Тип аккаунта</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="surname">Отчество</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="account_type_helper">* Укажите тип аккаунта</string>
    <string name="wrong_account_type_helper">* Выберите тип аккаунта из списка</string>
    <string name="wrong_gender_helper">* Выберите пол из списка</string>
    <string name="error_age_under_14">* Возраст младше 14 лет</string>
    <string name="error_login_password">* Неверный логин и/или пароль</string>
    <string name="no_last_name">* Укажите Фамилию</string>
    <string name="no_name">* Укажите Имя</string>
    <string name="no_birthday">* Укажите дату рождения</string>
    <string name="no_gender">* Укажите пол</string>
    <string name="no_phone">* Укажите номер телефона</string>
    <string name="wrong_phone">* Номер должен содержать 10 цифр (без +7)</string>
    <string name="no_email">* Укажите почту</string>
    <string name="wrong_email">* Неверный формат почты</string>
    <string name="profession">Специализация</string>
    <string name="no_profession">* Укажите специализацию</string>
    <string name="wrong_profession">* Выберите специализацию из списка</string>
    <string name="search">Поиск</string>
    <string name="schedule">График</string>
    <string name="no_schedule">* Укажите график</string>
    <string name="nothing_is_found">Ничего не найдено</string>
    <string name="choose_student_text"><u>Выберите ученика:</u></string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="no_date">* Выберите дату</string>
    <string name="no_time">* Выберите время</string>
    <string name="no_teacher">* Выберите преподавателя</string>
    <string name="no_consist">* Выберите вид занятия</string>


    <string name="simp_text">Из БД</string>
    <string name="date_simple">08 января 2000</string>
    <string name="time_simple">Понедельник в 15:00</string>
    <string name="teacher_simple">Имя Фамилия</string>
    <string name="student_simple">Имя Фамилия Отчество</string>
    <string name="datetime">01.01.2000 21:11</string>
    <string name="news_text">Текст поста</string>
    <string name="simp">Other many west partiality who laughter to my past voice held sweetness.</string>
    <string name="simple">Hour eagerness his scarcely.
        Taken green newspaper followed might party things settled vexed have beyond quick talked.
        Promotion understood who numerous dissimilar returned forth almost.
        Other many west partiality who laughter to my past voice held sweetness.
        Strangers draw taken feelings may prevent prepared though to entire repeated within fine assure sportsman square age.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>