<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/profile_item"
            android:title="@string/profile"
            android:icon="@drawable/baseline_person_24"/>

        <item
            android:id="@+id/settings_item"
            android:title="@string/settings"
            android:icon="@drawable/baseline_settings_24"/>
    </group>

    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/about_item"
            android:title="@string/about"
            android:icon="@drawable/baseline_info_outline_24"/>

        <item
            android:id="@+id/FAQ_item"
            android:title="@string/FAQ"
            android:icon="@drawable/baseline_help_outline_24"/>
    </group>

</menu>