<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LogChoice">

    <LinearLayout
        android:id="@+id/login_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/login_I_am"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_I_am"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:layout_marginBottom="25dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_button"
            android:background="@drawable/corner_background"
            android:text="@string/login_student"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textAppearance="@style/Theme.MaterialComponents"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="12dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teacher_button"
            android:background="@drawable/corner_background"
            android:text="@string/login_teacher"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textAppearance="@style/Theme.MaterialComponents"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/admin_button"
            android:background="@drawable/corner_background"
            android:text="@string/login_admin"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textAppearance="@style/Theme.MaterialComponents"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/manager_button"
            android:background="@drawable/corner_background"
            android:text="@string/login_manager"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textAppearance="@style/Theme.MaterialComponents"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</RelativeLayout>