<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_news"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/datetime_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/roboto"
            android:gravity="end"/>

        <TextView
            android:id="@+id/text_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start"
            android:text="@string/news_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/no_photo"
            android:contentDescription="@string/image"
            android:adjustViewBounds="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>