<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Login">

    <LinearLayout
        android:id="@+id/login_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <EditText
            android:id="@+id/login_log"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textVisiblePassword"
            android:hint="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginHorizontal="30dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="25dp"
            android:autofillHints="" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_background"
            android:text="@string/entry"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:textAllCaps="false"
            android:paddingHorizontal="40dp"
            android:layout_marginTop="40dp"/>

    </LinearLayout>


</RelativeLayout>