<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_lessons"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/lesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/lesson"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lesson_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/lesson"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/level_num"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/level_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/lesson_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_simple"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintBottom_toTopOf="@id/lesson_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/lesson_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_simple"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lesson_time"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/teacher_fio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/teacher_simple"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toTopOf="@id/classroom"
                app:layout_constraintStart_toEndOf="@id/teacher"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/classroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classroom"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teacher_fio"/>

            <TextView
                android:id="@+id/classroom_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/classroom"
                app:layout_constraintTop_toBottomOf="@id/teacher_fio"/>

            <TextView
                android:id="@+id/consist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consist"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/classroom"/>

            <TextView
                android:id="@+id/consist_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consist_value_alone"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/consist"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>